--- a/Flow.Launcher.Plugin.Everything.csproj
+++ b/Flow.Launcher.Plugin.Everything.csproj
@@ -118,13 +118,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Flow.Launcher.Plugin" Version="1.1.0" />
+    <PackageReference Include="Flow.Launcher.Plugin" Version="1.4.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="OLD_Flow.Launcher.Infrastructure">
+    <Reference Include="Flow.Launcher.Infrastructure">
       <HintPath>OLD_Flow.Launcher.Infrastructure.dll</HintPath>
     </Reference>
   </ItemGroup>
