--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,13 +22,13 @@ jobs:
       - run: echo ${{steps.version.outputs.prop}} 
       - name: Build
         run: |
-          dotnet publish 'Flow.Launcher.Plugin.Everything.csproj' --framework netcoreapp3.1  -c Release -o "Flow.Launcher.Plugin.Everything-${{steps.version.outputs.prop}}"
-          7z a -tzip "Flow.Launcher.Plugin.Everything-${{steps.version.outputs.prop}}.zip" "./Flow.Launcher.Plugin.Everything-${{steps.version.outputs.prop}}/*"
-          rm -r "Flow.Launcher.Plugin.Everything-${{steps.version.outputs.prop}}"
+          dotnet publish 'Flow.Launcher.Plugin.Everything.csproj' --framework netcoreapp3.1  -c Release -o "Flow.Launcher.Plugin.Everything"
+          7z a -tzip "Flow.Launcher.Plugin.Everything.zip" "./Flow.Launcher.Plugin.Everything/*"
+          rm -r "Flow.Launcher.Plugin.Everything"
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
-          files: "Flow.Launcher.Plugin.Everything*.zip"
+          files: "Flow.Launcher.Plugin.Everything.zip"
           tag_name: "v${{steps.version.outputs.prop}}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
