--- a/Flow.Launcher.Plugin.Everything.csproj
+++ b/Flow.Launcher.Plugin.Everything.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <ProjectGuid>{230AE83F-E92E-4E69-8355-426B305DA9C0}</ProjectGuid>
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Flow.Launcher.Plugin" Version="2.0.0" />
-    <PackageReference Include="Droplex" Version="1.3.1" />
+    <PackageReference Include="Droplex" Version="1.4.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
