--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.1
+          dotnet-version: 5.0.x
       - name: get version
         id: version
         uses: notiz-dev/github-action-json-property@release
