update target framework for workflow

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
       - run: echo ${{steps.version.outputs.prop}} 
       - name: Build
         run: |
-          dotnet publish 'Flow.Launcher.Plugin.Everything.csproj' --framework netcoreapp3.1  -c Release -o "Flow.Launcher.Plugin.Everything"
+          dotnet publish 'Flow.Launcher.Plugin.Everything.csproj' --framework net5.0-windows  -c Release -o "Flow.Launcher.Plugin.Everything"
           7z a -tzip "Flow.Launcher.Plugin.Everything.zip" "./Flow.Launcher.Plugin.Everything/*"
           rm -r "Flow.Launcher.Plugin.Everything"
       - name: Publish
